k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # 🔐 1. Todo lo que empiece con /auth va al Auth Service
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8001

      # 💬 2. Las conexiones de WebSockets van al Chat Backend
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: chat-backend
            port:
              number: 8000

      # 📊 3. Las métricas de Prometheus van al Chat Backend
      - path: /chat/metrics
        pathType: Prefix
        backend:
          service:
            name: chat-backend
            port:
              number: 8000

      # 🌐 4. La raíz de la app ahora entrega tu interfaz gráfica (HTML/JS)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
